--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -1,11 +1,24 @@
-<h2>Por Pais</h2>
-<hr>
+<div class="animate__animated animate__fadeIn animate__faster">
+    <h2>Por Pais</h2>
+    <hr>
 
-<div class="row">
-    <div class="col">
-        <app-pais-input (onEnter)="buscar($event)" (onDebounce)="sugerencias($event)" placeholder="Buscar Pais"></app-pais-input>
+    <div class="row">
+        <div class="col">
+            <app-pais-input (onEnter)="buscar($event)" (onDebounce)="sugerencias($event)" placeholder="Buscar Pais"></app-pais-input>
+        </div>
     </div>
 </div>
+
+<ul class="list-group" *ngIf="mostrarSugerencias">
+    <li class="list-group-item list-group-item-action"
+        *ngFor="let pais of paisesSugeridos">
+           <a class="nav-link"
+                [routerLink]="['/pais',pais.cca2]"> {{pais.name.common}}</a>
+    </li>
+    <li class="list-group-item list-group-item-action">
+       <a class="nav-link" (click)="buscarSugerido(termino)"> Buscar {{termino}}</a>
+</li>
+</ul>>
 
 <hr> 
 <div *ngIf="hayError"
