--- a/src/app/pais/pages/por-region/por-region.component.html
+++ b/src/app/pais/pages/por-region/por-region.component.html
@@ -1,1 +1,32 @@
-<p>por-region works!</p>
+<div class="animate__animated animate__fadeIn animate__faster">
+    <h3>Buscar por region <small> {{regionActiva | titlecase}} </small></h3>
+    <hr>
+
+    <h5>Seleccione la region</h5>
+
+    <div class="row">
+        <div class="col">
+
+            <!-- [class.btn-primary] = "region === regionActiva" -->
+            <!-- o -->
+            <!-- [ngClass]="{
+                'btn-primary': region === regionActiva,
+                'btn-outline-primary': region !== regionActiva
+            }" -->
+            <button *ngFor="let region of regiones"
+                    [class]="getClaseCSS(region)"
+
+                    (click)="activarRegion(region)">
+                {{region | titlecase}}
+            </button>
+        </div>
+    </div>
+</div>
+
+
+
+<div class="row">
+    <div class="col">
+        <app-pais-tabla [paises]="paises"></app-pais-tabla>
+    </div>
+</div>
